04.07.2024 Company and Subs Module updated1